@@ -255,7 +255,7 @@ if ($hour <= 0){
 
 $calself=basename($PHP_SELF);
 
-displayPageHeader($color, 'None');
+displayPageHeader($color);
 //load calendar menu
 calendar_header();
 
